--- a/Client Side/popup.html
+++ b/Client Side/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>G Vocab</title>
+    <title>Lexicon</title>
     <style>
       body {
         min-width: 400px;
@@ -12,18 +12,19 @@
         margin: 5px;
         /*border: 2px solid black;*/
         vertical-align: middle;
-       	width: 20px;
-				height: 20px;
+      	height: 20px;
 				cursor: pointer;
       }
 
       #revert{
       	padding: 10px;
       	background-color: #009ECE;
+				cursor: default;
       	color: white;
-      	margin-top: 10px;
+      	margin: 10px 0;
+      	text-align: justify;
       	border-radius: 5px;
-      	box-shadow: 0 0 10px #888888;
+      	/*box-shadow: 0 0 10px #888888;*/
       }
 
       #meaning1{
@@ -44,7 +45,7 @@
 			    display: inline-block;
 			    font-size: 12px;
 			    cursor: pointer;
-			    margin: 5px 6px;
+			    margin: 5px 4px;
 			    border-radius: 4px;
 			}
 
@@ -53,21 +54,13 @@
 				text-align: center;
 			}
 
-			li, #revert{
-				text-align: justify;
-			}
-
-			#revert{
-				cursor: default;
-			}
-
-			#help{
+			.helplist{
 				padding:15px;
 			}
 
 			p{
 				padding: 5px;
-				cursor: pointer;
+				text-align: justify;
 			}
 
 			form{
@@ -101,6 +94,8 @@
 
 			#alert{
 				color: red;
+				text-align: center;
+    		margin: 10px;
 			}
 
 			#fvpp-blackout {
@@ -148,62 +143,144 @@
 				color: #dbdada;
 				display: none;
 			}
+
+			.hide{
+				display: none;
+			}
+
+			#helpslide, #aboutslide{
+				position: absolute;
+				z-index: 999;
+				background: white;
+				overflow: auto;	
+				top: 100px;
+				bottom: 0;
+			}
+
+			.head{
+				width: 100%;
+				text-align: center;
+			}
+
+			.head img{
+				width: 50%;
+				height: auto;
+			}
+
+			.main{
+				position: relative;
+			}
+
+			header{
+				width: 100%;
+			}
+
+			header .socio{
+				float: right;
+			}
+
+			.helplist li, #mylist li{
+				padding: 5px;
+				text-align: justify;
+			}
+
+			#mylist{
+				display: none;
+			}
+
+			h4{
+				padding: 0 5px;
+			}
+
     </style>
 
   </head>
   <link rel="stylesheet" type="text/css" href="animate.css">
   <body >
-  	<header>
+  	<div class="head"><img src="lexicon.png"></div>
   		<img src="about.png" id="about" alt="About" title="About">
-  		<img src="gear.png" id="help" alt="Help" title="Help">
-  	</header>
-  	<div id="slide">
+  		<img src="help.png" id="help" alt="Help" title="Help">
+  		<!-- <img src="fb.png" id="fb" class="socio">
+  		<img src="mail.png" id="mail" class="socio"> -->
+  	<div id="helpslide" class="hide">
   		<table>
   			<tr>
   				<th>When you are on google search page</th>
   			</tr>
   			<tr>	
   				<td>
-  					<ol id="help">
-  						<li>Try finding meaning of any word on google, it will automatically reflect in the G Vocab while opening it.</li>
+  					<ol class="helplist">
+  						<li>The application require working internet connetion.</li>
+  						<li>Try to find meaning of any word on google, it will automatically reflect in the "Lexicon" while opening it.</li>
+  						<li>Lexicon will able to take only first word from Google's search input, so avoid writing in sentences. E.g. "Define ersatz" will not work</li>
   						<li>The searched word can be saved for future references, you can save as many words as you want.</li>
-  						<li>The list of saved words can be seen by clicking "Show All" button.</li>
+  						<li>The list of saved words can be seen by clicking "Show All" button even when you are offline.</li>
   						<li>You can delete saved words permanently either by multiple selection using checkboxes or at once by "Delete All" button.</li>
-  						<li>For further details and usage of the particular word, you can visit the website directly by clicking "Go to the Site".</li>
-  						<li>You can also search by by simply clicking on a word inside blue box. </li>
+  						<li>For further details and usage of the particular word, you can visit the website directly by clicking "Go to the Website".</li>
+  						<li>You can also search by simply clicking on a word inside blue box. </li>
+  					</ol>
+  				</td>
+  			</tr>
+  			<tr>
+  				<th>While on non-Google search page</th>
+  			</tr>
+  			<tr>	
+  				<td>
+  					<ol class ="helplist">
+  						<li>All above steps will work plus you can search for a word manually by typing it into the form.</li>
   					</ol>
   				</td>
   			</tr>
   		</table>
   	</div>
-  	<div id="load">Loading...</div>
-  	<div id="revert" class="box"></div>
-  	<div id="alert" class="box"></div>
-  	<ol id="mylist">
-  		
-  	</ol>
-  	<div id="google-welcome-message">
-		  <h2>This is your first visit</h2>
-		  <p>You will see this page when you search the meaning of a single word on google</p>
-		</div>
+  	<div id="aboutslide" class="hide">
+  		<p>Copyright (c) 2016 Lexicon Chrome Extension</p>
+			<P>
+			THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+			IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+			FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+			AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+			LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+			OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+			SOFTWARE.</P>
+			<p>
+			THE SOFTWARE IS TOTALLY FREE OF COST AND WILL BE ALWAYS
+			</p>
 
-	 	<div id="nongoogle-welcome-message">
-		  <h2>This is your first visit</h2>
-		  <p>You will see this page when you are not using google</p>
-		</div>
+			<h4>Please provide your valuable feedbacks and suggestions in comments to make this more better.</h4>
+  	</div>
+  	<div class="main">
+	  	<div id="load">Loading...</div>
+	  	<div id="revert" class="box"></div>
+	  	<div id="alert" class="box"></div>
+	  	<div id="hiddenWord" class="hide"></div>
+	  	<div id="hiddenDef" class="hide"></div>
+	  	<ol id="mylist">
+	  		
+	  	</ol>
+	  	<div id="google-welcome-message">
+			  <h2>This is your first visit</h2>
+			  <p>You will see this page when you search the meaning of a single word on google</p>
+			</div>
 
-	  <div class="btn">
-	  	<button id="add">Save this Word</button>
-		  <button id="clear">Clear All</button>
-	  	<button id="show">Show All</button>
-	 		<button id="site">Go to Original WebSite</button>
-	 		<button id="del">Delete Selected Words</button>
-	  </div>
-	  <form id="reg-form">
-		  <input type="text" name="link" id="link" placeholder="Enter the word" required>
-		  <input type="submit" name="btn" id="btn" value="Try Manual Search">
-	  </form>
-	  <div id="result"></div>
+		 	<div id="nongoogle-welcome-message">
+			  <h2>This is your first visit</h2>
+			  <p>You will see this page when you are not using google</p>
+			</div>
+
+		  <div class="btn">
+		  	<button id="add">Save this Word</button>
+			  <button id="clear">Delete All</button>
+		  	<button id="show">Show All</button>
+		 		<button id="site">See on Original WebSite</button>
+		 		<button id="del">Delete Selected Words</button>
+		  </div>
+		  <form id="reg-form">
+			  <input type="text" name="link" id="link" placeholder="Enter the word" required>
+			  <input type="submit" name="btn" id="btn" value="Try Manual Search">
+		  </form>
+		  <div id="result"></div>
+		</div>
 	  <script src="jquery-1.8.0.min.js"></script>
     <script src="popup.js"></script>
     <script src="jquery.firstVisitPopup.js"></script>
