--- a/Client Side/popup.html
+++ b/Client Side/popup.html
@@ -8,6 +8,11 @@
         overflow-x: hidden;
       }
 
+      h1{
+      	text-align: center;
+      	margin-top: 0;
+      }
+
       img {
         margin: 5px;
         /*border: 2px solid black;*/
@@ -203,6 +208,7 @@
   		<!-- <img src="fb.png" id="fb" class="socio">
   		<img src="mail.png" id="mail" class="socio"> -->
   	<div id="helpslide" class="hide">
+  		<h1>Help</h1>
   		<table>
   			<tr>
   				<th>When you are on google search page</th>
@@ -211,13 +217,18 @@
   				<td>
   					<ol class="helplist">
   						<li>The application require working internet connetion.</li>
-  						<li>Try to find meaning of any word on google, it will automatically reflect in the "Lexicon" while opening it.</li>
+  						<li>There are 4 different ways of searching in Lexicon-</li>
+  							<ul>
+		  						<li>Try to find meaning of any word on google, it will automatically reflect in the Lexicon on opening.</li>
+  								<li>You can also search by simply clicking on a word inside blue box. </li>
+  								<li>Another way of searching is manual searching which you can do on non-google pages.</li>
+  								<li>There is another option for search by selecting the word on webpage and then opening the Lexicon. It automatically detect the meaning and present it in front of you.</li>
+  							</ul>
   						<li>Lexicon will able to take only first word from Google's search input, so avoid writing in sentences. E.g. "Define ersatz" will not work</li>
   						<li>The searched word can be saved for future references, you can save as many words as you want.</li>
   						<li>The list of saved words can be seen by clicking "Show All" button even when you are offline.</li>
   						<li>You can delete saved words permanently either by multiple selection using checkboxes or at once by "Delete All" button.</li>
-  						<li>For further details and usage of the particular word, you can visit the website directly by clicking "Go to the Website".</li>
-  						<li>You can also search by simply clicking on a word inside blue box. </li>
+  						<li>For further details and usage of the particular word, you can visit the website directly by clicking "See on Original WebSite".</li>
   					</ol>
   				</td>
   			</tr>
@@ -228,12 +239,14 @@
   				<td>
   					<ol class ="helplist">
   						<li>All above steps will work plus you can search for a word manually by typing it into the form.</li>
+  						<li>There is no auto correction, so spelling mistakes should be avoided by user itself.</li>
   					</ol>
   				</td>
   			</tr>
   		</table>
   	</div>
   	<div id="aboutslide" class="hide">
+  		<h1>Licence</h1>
   		<p>Copyright (c) 2016 Lexicon Chrome Extension</p>
 			<P>
 			THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
