--- a/Client Side/popup.html
+++ b/Client Side/popup.html
@@ -15,7 +15,6 @@
 
       img {
         margin: 5px;
-        /*border: 2px solid black;*/
         vertical-align: middle;
       	height: 20px;
 				cursor: pointer;
@@ -222,7 +221,7 @@
 		  						<li>Try to find meaning of any word on google, it will automatically reflect in the Lexicon on opening.</li>
   								<li>You can also search by simply clicking on a word inside blue box. </li>
   								<li>Another way of searching is manual searching which you can do on non-google pages.</li>
-  								<li>There is another option for search by selecting the word on webpage and then opening the Lexicon. It automatically detect the meaning and present it in front of you.</li>
+  								<li><strong>There is another option for search by selecting the word on webpage and then opening the Lexicon. It automatically detect the meaning and display it in front of you.</strong></li>
   							</ul>
   						<li>Lexicon will able to take only first word from Google's search input, so avoid writing in sentences. E.g. "Define ersatz" will not work</li>
   						<li>The searched word can be saved for future references, you can save as many words as you want.</li>
@@ -257,7 +256,9 @@
 			OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 			SOFTWARE.</P>
 			<p>
-			THE SOFTWARE IS TOTALLY FREE OF COST AND WILL BE ALWAYS
+			THE DATA IS TAKEN FROM YOURDICTIONARY.COM AND THEY HAVE FULL RIGHT TO CHANGE ANYTHING IN THE CONTENT. 
+			LEXICON IS NOT CLAMING ANY TYPE OF RIGHT ON THE CONTENT AND THERE IS NO INTENTION TO MAKE IT COMMERCIAL.
+			THE SOFTWARE IS TOTALLY ADS FREE AND WILL BE ALWAYS.
 			</p>
 
 			<h4>Please provide your valuable feedbacks and suggestions in comments to make this more better.</h4>
