--- a/Client Side/popup.html
+++ b/Client Side/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Lexicon</title>
+    <title>word-o-save</title>
     <style>
       body {
         min-width: 400px;
@@ -202,7 +202,7 @@
   </head>
   <link rel="stylesheet" type="text/css" href="animate.css">
   <body >
-  	<div class="head"><img src="lexicon.png"></div>
+  	<div class="head"><img src="logo.png"></div>
   		<img src="about.png" id="about" alt="About" title="About">
   		<img src="help.png" id="help" alt="Help" title="Help">
   		<!-- <img src="fb.png" id="fb" class="socio">
@@ -217,14 +217,14 @@
   				<td>
   					<ol class="helplist">
   						<li>The application require working internet connetion.</li>
-  						<li>There are 4 different ways of searching in Lexicon-</li>
+  						<li>There are 4 different ways of searching in word-o-save.</li>
   							<ul>
-		  						<li>Try to find meaning of any word on google, it will automatically reflect in the Lexicon on opening.</li>
+		  						<li>Try to find meaning of any word on google, it will automatically reflect in the word-o-save on opening.</li>
   								<li>You can also search by simply clicking on a word inside blue box. </li>
   								<li>Another way of searching is manual searching which you can do on non-google pages.</li>
-  								<li>There is another option for search by selecting the word on webpage and then opening the Lexicon. It automatically detect the meaning and present it in front of you.</li>
+  								<li>There is another option for search by selecting the word on webpage and then opening the word-o-save. It automatically detect the meaning and present it in front of you.</li>
   							</ul>
-  						<li>Lexicon will able to take only first word from Google's search input, so avoid writing in sentences. E.g. "Define ersatz" will not work</li>
+  						<li>word-o-save will able to take only first word from Google's search input, so avoid writing in sentences. E.g. "Define ersatz" will not work</li>
   						<li>The searched word can be saved for future references, you can save as many words as you want.</li>
   						<li>The list of saved words can be seen by clicking "Show All" button even when you are offline.</li>
   						<li>You can delete saved words permanently either by multiple selection using checkboxes or at once by "Delete All" button.</li>
@@ -247,7 +247,7 @@
   	</div>
   	<div id="aboutslide" class="hide">
   		<h1>Licence</h1>
-  		<p>Copyright (c) 2016 Lexicon Chrome Extension</p>
+  		<p>Copyright (c) 2016 word-o-save Chrome Extension</p>
 			<P>
 			THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 			IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
